infra/k8s/base/client/ingress.yaml
# k8s/base/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            # 与后端服务（base/user-service）名称保持一致
            name: user-service
            port:
              number: 8080
      - path: /api/travels
        pathType: Prefix
        backend:
          service:
            name: travel-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 80
